--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Node Sample App</title>
+	<title>Node BMS App</title>
 
 	<!-- CSS -->
 	<!-- load bootstrap and our own personal stylesheet -->
@@ -14,11 +14,8 @@
 
 <div class="container">
 	<div class="jumbotron">
-		<h1>This Is Heroku Awesome!</h1>
-		<p>This is the sample of a tutorial on <a href="http://scotch.io">scotch.io</a></p>
-		<a href="http://scotch.io/tutorials/" class="btn btn-primary btn-lg">View the Tutorial</a>
+		<h1>This Is Node BMS Backend Server!</h1>
 	</div>
 </div>
-	
 </body>
 </html>
